@@ -40,6 +40,7 @@ export(collapse)
 export(decimal2Date)
 export(download.phylopic)
 export(expand)
+export(expand_xlim)
 export(facet_plot)
 export(flip)
 export(geom_aline)
